--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,79 @@
+#App {
+  background-color: #f0f0f0;
+  padding-bottom: 20px;
+}
+
+#navBar {
+  display: grid;
+  grid-template-columns: 2fr 2fr 4fr 2fr 2fr;
+  grid-template-rows: 1fr;
+  align-items: center;
+  background-color: #1c1c1c;
+  color: white;
+  padding: 3px;
+}
+
+#title {
+  margin: 0 auto;
+  font-size: 28px;
+  grid-column: 3;
+  grid-row: 1;
+}
+
+.navButtons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.navText {
+  font-size: 20px;
+}
+
+#navRight {
+  grid-column: 4;
+  grid-row: 1;
+}
+
+#navLeft {
+  grid-column: 2;
+  grid-row: 1;
+}
+
 #onThisDay {
   font-size: 32px;
   text-align: center;
 }
 
+.categoryEvents {
+  border: 1px solid black;
+  border-radius: 8px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+
+.categoryHeaderWrapper {
+
+}
+
 .categoryHeader {
   text-align: center;
-  font-size: 26px
+  font-size: 32px;
 }
 
 #eventDisplay {
-  width: 64%;
+  width: 60%;
   margin: auto;
+}
+
+.eventWrapper {
+  background-color: #f5f5f5;
+  border: 1px solid black;
+  border-radius: 8px;
+  padding: 0px 10px 10px 10px;
 }
 
 .eventHeader {
@@ -26,6 +89,11 @@
 .eventImg {
   display: block;
   margin: 0 auto;
+}
+
+.eventDescription {
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .sourcesWrapper {
