--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 #App {
-  background-color: #f0f0f0;
+  background-color: #ebebeb;
   padding-bottom: 20px;
 }
 
@@ -28,7 +28,7 @@
 }
 
 .navText {
-  font-size: 20px;
+  font-size: 22px;
 }
 
 #navRight {
@@ -41,18 +41,28 @@
   grid-row: 1;
 }
 
+#onThisDayWrapper {
+
+}
+
 #onThisDay {
   font-size: 32px;
   text-align: center;
 }
 
+#settings {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
 .categoryEvents {
   border: 1px solid black;
   border-radius: 8px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: 10px;
   margin-bottom: 20px;
+  background-color: black;
+  color: white;
 }
 
 .categoryHeaderWrapper {
@@ -61,7 +71,7 @@
 
 .categoryHeader {
   text-align: center;
-  font-size: 32px;
+  font-size: 38px;
 }
 
 #eventDisplay {
@@ -71,9 +81,16 @@
 
 .eventWrapper {
   background-color: #f5f5f5;
+  color: black;
   border: 1px solid black;
-  border-radius: 8px;
+  border-left: 0px;
+  border-right: 0px;
+  border-bottom: 0px;
+  border-radius: 3px;
+  border-bottom-right-radius: 7px;
+  border-bottom-left-radius: 7px;
   padding: 0px 10px 10px 10px;
+  margin-top: 5px;
 }
 
 .eventHeader {
