--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,46 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+#datePicker {
+  font-size: 20px;
+  font-weight: bold;
+  width: 170px;
+  height: 52px;
+  border-color: black;
+  border-width: 1px;
+  margin-right: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+#searchWrapper {
+  font-size: 22px;
+  border: 1px solid black;
+  margin-left: 10px;
+  padding: 0px;
+}
+
+#searchField {
+  font-size: 17px;
+  font-weight: bold;
+  width: 175px;
+  height: 52px;
+  padding: 0px;
+  padding-left: 12px;
+  border: 0px;
+}
+
+#searchButton {
+  width: 52px;
+  height: 52px;
+  background-color: white;
+  color: grey;
+  border: 0px;
 }
 
 .categoryEvents {
