--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,10 @@
 }
 
 #datePicker {
-  font-size: 20px;
+  font-size: 17px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   font-weight: bold;
   width: 170px;
   height: 52px;
@@ -72,7 +75,6 @@
 }
 
 #searchWrapper {
-  font-size: 22px;
   border: 1px solid black;
   margin-left: 10px;
   padding: 0px;
