--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 #App {
-  background-color: #ebebeb;
-  padding-bottom: 20px;
+  min-height: 100%;
 }
 
 #navBar {
+  position: sticky;
+  top: 0px;
   display: grid;
   grid-template-columns: 2fr 2fr 4fr 2fr 2fr;
   grid-template-rows: 1fr;
@@ -11,6 +12,7 @@
   background-color: #1c1c1c;
   color: white;
   padding: 3px;
+  z-index: 99;
 }
 
 #title {
@@ -41,22 +43,13 @@
   grid-row: 1;
 }
 
-#onThisDayWrapper {
-
-}
-
-#onThisDay {
-  font-size: 32px;
-  text-align: center;
-}
-
 #settings {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-bottom: 20px;
-  margin-top: 20px;
+  margin-bottom: 15px;
+  margin-top: 25px;
 }
 
 #datePicker {
@@ -65,19 +58,41 @@
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   font-weight: bold;
-  width: 170px;
   height: 52px;
   border-color: black;
   border-width: 1px;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px;
   margin-right: 10px;
+  padding-top: 1px;
+  padding-bottom: 1px;
   padding-left: 5px;
   padding-right: 5px;
 }
 
+#onThisDayWrapper {
+  display: flex;
+  justify-content: center;
+}
+
+#onThisDay {
+  font-size: 32px;
+  text-align: center;
+  border-bottom: 1px solid black;
+  display: inline-block;
+  padding: 5px;
+  padding-left: 12px;
+  padding-right: 12px;
+  margin-top: 0px;
+  margin-bottom: 22px;
+}
+
 #searchWrapper {
   border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px;
   margin-left: 10px;
-  padding: 0px;
+  padding: 1px;
 }
 
 #searchField {
@@ -101,14 +116,21 @@
 .categoryEvents {
   border: 1px solid black;
   border-radius: 8px;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
   margin-bottom: 20px;
   background-color: black;
   color: white;
+  box-shadow: 3px 3px 5px black;
 }
 
 .headerWrapper {
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.headerWrapper {
+  cursor: pointer;
 }
 
 .categoryHeaderWrapper {
@@ -127,27 +149,52 @@
 }
 
 .eventWrapper {
-  background-color: #f5f5f5;
+  background-color: white;
   color: black;
   border: 1px solid black;
   border-left: 0px;
   border-right: 0px;
   border-bottom: 0px;
-  border-radius: 3px;
-  border-bottom-right-radius: 7px;
-  border-bottom-left-radius: 7px;
-  padding: 0px 0px 10px 0px;
+  border-radius: 0px;
+  padding: 0px;
+  margin-top: 0px;
+}
+
+.eventHeaderWrapper {
+
+}
+
+.eventHeaderWrapper:hover {
+  cursor: pointer;
+}
+
+.eventButton {
+  position: absolute;
+  margin-left: 9px;
   margin-top: 5px;
 }
 
 .eventHeader {
   text-align: center;
   font-size: 23px;
+  margin-bottom: 0px;
+  padding-bottom: 17px;
+}
+
+.expandedEventHeader {
+  border-bottom: 1px solid black;
+  background-color: white;
+}
+
+.eventFull {
+  background-color: #f5f5f5;
 }
 
 .eventDate {
   text-align: center;
   font-size: 20px;
+  margin-top: 0px;
+  padding-top: 15px;
 }
 
 .eventImg {
@@ -162,12 +209,29 @@
 
 .sourcesWrapper {
   text-align: center;
+  border-top: 1px solid black;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.links {
+  font-size: 22px;
+  text-decoration: none;
+  color: black;
+  padding-bottom: 8px;
+  padding-top: 7px;
+  background: white;
+}
+
+.links:hover {
+  font-weight: bold;
 }
 
 .source {
-  font-size: 22px;
-  text-decoration: underline;
-  color: black;
-  margin-left: 10px;
-  margin-right: 10px;
+  grid-column: 1;
+  border-right: 1px solid black;
+}
+
+.more {
+  grid-column: 2;
 }
