--- a/src/App.css
+++ b/src/App.css
@@ -11,15 +11,24 @@
   align-items: center;
   background-color: #1c1c1c;
   color: white;
-  padding: 3px;
+  padding: 10px;
+  padding-bottom: 15px;
   z-index: 99;
+}
+
+.searchIcon {
+  font-size: 18px;
 }
 
 #title {
   margin: 0 auto;
-  font-size: 28px;
+  font-size: 26px;
   grid-column: 3;
   grid-row: 1;
+}
+
+#title:hover {
+  text-decoration: underline;
 }
 
 .navButtons {
@@ -31,15 +40,42 @@
 
 .navText {
   font-size: 22px;
+  text-decoration: none;
+  color: white;
+  justify-self: center;
 }
 
-#navRight {
+.navText:hover {
+  text-decoration: underline;
+}
+
+/*#navRight {
   grid-column: 4;
   grid-row: 1;
 }
 
 #navLeft {
   grid-column: 2;
+  grid-row: 1;
+}*/
+
+#aboutLink {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+#donateLink {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+#volunteer {
+  grid-column: 4;
+  grid-row: 1;
+}
+
+#contactLink {
+  grid-column: 5;
   grid-row: 1;
 }
 
@@ -119,7 +155,7 @@
   border-bottom-right-radius: 0px;
   border-bottom-left-radius: 0px;
   margin-bottom: 20px;
-  background-color: black;
+  background-color: #1c1c1c;
   color: white;
   box-shadow: 3px 3px 5px black;
 }
@@ -164,6 +200,11 @@
 
 }
 
+.headerEvent {
+  margin-left: 30px;
+  margin-right: 10px;
+}
+
 .eventHeaderWrapper:hover {
   cursor: pointer;
 }
@@ -194,6 +235,7 @@
   text-align: center;
   font-size: 20px;
   margin-top: 0px;
+  margin-bottom: 10px;
   padding-top: 15px;
 }
 
@@ -224,7 +266,8 @@
 }
 
 .links:hover {
-  font-weight: bold;
+  background: #1c1c1c;
+  color: white;
 }
 
 .source {
@@ -234,4 +277,78 @@
 
 .more {
   grid-column: 2;
+}
+
+/*items only rendered at 800px width or below*/
+#hamburgerOpen {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  background-color: grey;
+  top: 50px;
+  background: linear-gradient(0deg, rgba(37,37,37,1) 0%, #1c1c1c 100%);
+  z-index: 100;
+};
+
+.hamburgerIcon {
+  margin-left: 10px;
+}
+
+.hamburgerText {
+  border-bottom: 1px solid grey;
+  padding: 10px;
+}
+
+.hamburgerText:hover {
+  font-weight: bold;
+}
+
+/*media queries*/
+
+@media (max-width: 1000px) {
+  #eventDisplay {
+    width: 70%;
+  }
+}
+
+@media (max-width: 800px) {
+  #navBar {
+    position: sticky;
+    top: 0px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    align-items: center;
+    background-color: #1c1c1c;
+    color: white;
+    padding: 10px;
+    padding-bottom: 15px;
+    z-index: 99;
+  }
+
+  #title {
+    margin: 0 auto;
+    font-size: 26px;
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  #eventDisplay {
+    width: 80%;
+  }
+}
+
+@media (max-width: 700px) {
+  #eventDisplay {
+    width: 92%;
+  }
+}
+
+@media (max-width: 500px) {
+  #datePicker {
+
+  }
+  #searchField {
+    width: 85px;
+  }
 }
