Changed favicon, handled blank date from user bug (if given date is blank, just return null).

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
 }
 
 #title:hover {
-  text-decoration: underline;
+  
 }
 
 .navButtons {
@@ -46,7 +46,7 @@
 }
 
 .navText:hover {
-  text-decoration: underline;
+  font-weight: bold;
 }
 
 /*#navRight {
