--- a/src/App.css
+++ b/src/App.css
@@ -360,4 +360,42 @@
   #searchField {
     width: 85px;
   }
+  #onThisDay {
+    font-size: 26px;
+    text-align: center;
+    border-bottom: 1px solid black;
+    display: inline-block;
+    padding: 5px;
+    padding-left: 12px;
+    padding-right: 12px;
+    margin-top: 0px;
+    margin-bottom: 15px;
+  }
+  .headerWrapper {
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+  .categoryHeader {
+    text-align: center;
+    font-size: 26px;
+    margin: 0px;
+  }
+  .eventHeader {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 0px;
+    padding-bottom: 15px;
+  }
+  .eventDate {
+    text-align: center;
+    font-size: 18px;
+    margin-top: 0px;
+    margin-bottom: 8px;
+    padding-top: 12px;
+  }
+  .eventDescription {
+    margin-left: 23px;
+    margin-right: 23px;
+    font-size: 15px;
+  }
 }
