--- a/src/about.css
+++ b/src/about.css
@@ -1,9 +1,47 @@
 #aboutWrapper {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
-  margin-top: 10px;
+  margin-top: 15px;
   margin-bottom: 10px;
 }
+
+#aboutContent {
+  grid-column: 2;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 5px;
+  box-shadow: 1px 1px 5px;
+  padding-bottom: 15px;
+}
+
+#aboutHeader {
+  background-color: #1c1c1c;
+  padding: 10px;
+}
+
+#aboutHeaderText {
+  font-size: 24px;
+  color: white;
+  margin-top: 0px;
+  margin-bottom: 5px;
+  text-align: center;
+}
+
+.aboutText {
+  font-size: 18px;
+  margin-bottom: 0px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+#emailLink {
+  color: black
+}
+
+#emailLink:hover {
+  font-weight: bold;
+}
+
 
 @media (max-width: 1200px) {
   #aboutWrapper {
@@ -32,39 +70,20 @@
   }
 }
 
-#aboutContent {
-  grid-column: 2;
-  background-color: white;
-  border: 1px solid black;
-  border-radius: 5px;
-  box-shadow: 1px 1px 5px;
-  padding-bottom: 15px;
-}
 
-#aboutHeader {
-  background-color: #1c1c1c;
-  padding: 10px;
-}
+@media (max-width: 500px) {
+  #aboutHeader {
+    padding: 5px;
+  }
 
-#headerText {
-  font-size: 24px;
-  color: white;
-  margin-top: 0px;
-  margin-bottom: 5px;
-  text-align: center;
-}
-
-.aboutText {
-  font-size: 18px;
-  margin-bottom: 0px;
-  margin-left: 20px;
-  margin-right: 20px;
-}
-
-#emailLink {
-  color: black
-}
-
-#emailLink:hover {
-  font-weight: bold;
+  #aboutHeaderText {
+    font-size: 21px;
+    color: white;
+  }
+  .aboutText {
+    font-size: 15px;
+    margin-bottom: 0px;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
 }
