--- a/src/volunteer.css
+++ b/src/volunteer.css
@@ -1,7 +1,7 @@
 #volunteerWrapper {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
-  margin-top: 10px;
+  margin-top: 15px;
   margin-bottom: 10px;
 }
 
@@ -9,8 +9,6 @@
   #volunteerWrapper {
     display: grid;
     grid-template-columns: 1fr 5fr 1fr;
-    margin-top: 10px;
-    margin-bottom: 10px;
   }
 }
 
@@ -18,8 +16,6 @@
   #volunteerWrapper {
     display: grid;
     grid-template-columns: 1fr 8fr 1fr;
-    margin-top: 10px;
-    margin-bottom: 10px;
   }
 }
 
@@ -27,8 +23,6 @@
   #volunteerWrapper {
     display: grid;
     grid-template-columns: 20px 1fr 20px;
-    margin-top: 10px;
-    margin-bottom: 10px;
   }
 }
 
@@ -45,7 +39,7 @@
   padding: 10px;
 }
 
-#headerText {
+#volunteerHeaderText {
   font-size: 24px;
   color: white;
   margin-top: 0px;
@@ -67,7 +61,6 @@
 
 ul {
   grid-column: 2;
-  
   margin-left: 10px;
   margin-right: 10px;
 }
@@ -78,4 +71,31 @@ ul {
 
 .volunteerLink:hover {
   font-weight: bold;
+}
+
+@media (max-width: 500px) {
+  #volunteerHeader {
+    padding: 5px;
+  }
+
+  #volunteerHeaderText {
+    font-size: 21px;
+    color: white;
+  }
+  .volunteerText {
+    font-size: 15px;
+    margin-bottom: 0px;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+  .volunteerListText {
+    font-size: 15px;
+    margin-top: 7px;
+  }
+
+  ul {
+    grid-column: 2;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
 }
