Creation of donation view which allows users to choose Patreon, GoFundMe, or volunteer stuff. Better resizing so homepage looks coherent at less than 360px.

--- a/src/App.css
+++ b/src/App.css
@@ -409,3 +409,15 @@
     font-size: 15px;
   }
 }
+
+@media (max-width: 375px) {
+  #searchField {
+    width: 50px;
+  }
+  #searchButton {
+    width: 35px;
+  }
+  #datePicker {
+    width: 160px;
+  }
+}
