--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,8 @@
   align-items: center;
   background-color: #1c1c1c;
   color: white;
-  padding: 10px;
-  padding-bottom: 15px;
   z-index: 99;
+  box-shadow: 0px 0px 5px black;
 }
 
 .searchIcon {
@@ -22,14 +21,14 @@
 
 #title {
   margin: 0 auto;
-  font-size: 26px;
-  line-height: 26px;
+  font-size: 28px;
+  line-height: 28px;
   grid-column: 3;
   grid-row: 1;
 }
 
 #title:hover {
-  font-size: 28px;
+
 }
 
 .navButtons {
@@ -39,16 +38,36 @@
   justify-content: space-around;
 }
 
-.navText {
-  font-size: 22px;
-  line-height: 22px;
+.navTextWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 12px;
+  background-color: #e3e3e3;
+  color: black;
+  transition: background .5s ease;
+  border: 1px solid black;
+  border-right: none;
   text-decoration: none;
+}
+
+.navTextWrapper:hover {
+  background-color: #333333;
   color: white;
+}
+
+.navText {
+  font-size: 28px;
+  line-height: 28px;
+  text-decoration: none;
   justify-self: center;
+  color: inherit;
+  text-decoration: none;
+  margin: 0px;
 }
 
 .navText:hover {
-  font-size: 24px;
+
 }
 
 /*#navRight {
@@ -79,6 +98,31 @@
 #contactLink {
   grid-column: 5;
   grid-row: 1;
+}
+
+#appPromoWrapper {
+  display: flex;
+  justify-content: center;
+}
+
+#appPromo {
+  display: inline-block;
+  padding: 10px;
+  background-color: white;
+  color: black;
+  border: 1px solid #1c1c1c;
+  border-radius: 5px;
+  font-size: 22px;
+  font-weight: normal;
+  box-shadow: 1px 1px 3px black;
+  text-decoration: none;
+  transition: background .5s ease;
+  margin-top: 15px;
+}
+
+#appPromo:hover {
+  background-color: #333333;
+  color: white;
 }
 
 #settings {
@@ -237,7 +281,7 @@
 }
 
 .eventFull {
-  background-color: #f5f5f5;
+  background-color: #f7f7f7;
 }
 
 .eventDate {
@@ -325,6 +369,19 @@
   font-weight: bold;
 }
 
+.copyWrapper {
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+}
+
+.copyText {
+  margin: 0px;
+  margin-left: 8px;
+}
+
 /*media queries*/
 
 @media (max-width: 1000px) {
@@ -343,8 +400,6 @@
     align-items: center;
     background-color: #1c1c1c;
     color: white;
-    padding: 10px;
-    padding-bottom: 15px;
     z-index: 99;
   }
 
