--- a/src/App.css
+++ b/src/App.css
@@ -4,12 +4,14 @@ html {
 }
 
 #root {
-
+  min-height: 100%;
 }
 
 #App {
   min-height: 100%;
 }
+
+/*big navbar stuff */
 
 #fullNavBarContainer {
   display: flex;
@@ -17,8 +19,8 @@ html {
   top: 0px;
   justify-content: space-between;
   padding-right: 25px;
-  background-color: #f5f5f5;
-  border-bottom: 1px solid grey;
+  background-color: #f7f7f7;
+  border-bottom: 1px solid #d1d1d1;
   z-index: 99;
 }
 
@@ -47,7 +49,7 @@ html {
   font-size: 28px;
   font-weight: bold;
   height: 66px;
-  width: 80px;
+  width: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -56,6 +58,11 @@ html {
 #titleContainer:hover {
   background-color: #e62222;
   color: #1c1c1c;
+}
+
+#socialWrapper {
+  display: flex;
+  flex-direction: row;
 }
 
 #fullNavTitle {
@@ -86,7 +93,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50px;
+  /*width: 50px;*/
 }
 
 .faNavIcon {
@@ -95,8 +102,8 @@ html {
 
 .faNavIconContainer {
   border-radius: 100px;
-  height: 50px;
-  width: 50px;
+  height: 44px;
+  width: 44px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -109,6 +116,22 @@ html {
 #appleContainer {
   background-color: #333333;
 }
+
+/*small navbar stuff*/
+
+#smallNavBarContainer {
+  display: flex;
+  position: sticky;
+  top: 0px;
+  justify-content: space-between;
+  height: 50px;
+  padding-right: 25px;
+  background-color: #f7f7f7;
+  border-bottom: 1px solid #d1d1d1;
+  z-index: 99;
+}
+
+/*old navbar stuff */
 
 #navBar {
   position: sticky;
@@ -213,30 +236,197 @@ html {
   grid-row: 1;
 }
 
-#appPromoWrapper {
-  display: flex;
-  justify-content: center;
+/*homepage stuff*/
+
+#homepageWrapper {
+  min-height: 100%;
 }
 
-#appPromo {
-  display: inline-block;
-  padding: 10px;
-  background-color: white;
-  color: black;
-  border: 1px solid #333333;
-  border-radius: 5px;
+#homepageContent {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+#homepageImg {
+  width: 100%;
+  grid-column: 1;
+}
+
+#homepageText {
+  grid-column: 2;
+  display: grid;
+  grid-template-rows: auto auto auto;
+}
+
+#eventOfTheDayWrapper {
+  grid-column: 1 / 2;
+}
+
+#homepageTextWrapper {
+  position: absolute;
+  top: 115px;
+  right: 80px;
+}
+
+#homepageHeader {
+  text-align: center;
+  font-size: 42px;
+  font-weight: bold;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+#homepageDescription {
   font-size: 22px;
-  font-weight: normal;
-  box-shadow: 1px 1px 3px black;
-  text-decoration: none;
-  transition: background .5s ease;
-  margin-top: 18px;
+  margin-top: 10px;
+  margin-left: 25px;
+  margin-right: 15px;
 }
 
-#appPromo:hover {
-  background-color: #333333;
-  color: white;
+#toTheCalendarOuterWrapper {
+  background-color: #e8e8e8;
+  color: #333333;
+  border: 1px solid black;
+  padding: 18px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  font-size: 28px;
+  display: table;
+  border-radius: 10px;
+  margin: auto;
+  transition: .5s ease;
+  text-decoration: none;
 }
+
+#toTheCalendarWrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+#toTheCalendarOuterWrapper:hover {
+  color: #ededed;
+  background-color: #333333;
+}
+
+#toTheCalendar {
+  margin-top: 0px;
+  margin-right: 8px;
+  margin-bottom: 0px;
+}
+
+@media (max-width: 1300px) {
+  #homepageHeader {
+    font-size: 36px;
+  }
+  #homepageDescription {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 1140px) {
+  #homepageHeader {
+    font-size: 30px;
+  }
+  #homepageDescription {
+    font-size: 18px;
+  }
+  #toTheCalendarOuterWrapper {
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 1040px) {
+  #homepageHeader {
+    font-size: 24px;
+  }
+  #homepageDescription {
+    font-size: 16px;
+  }
+  #toTheCalendarOuterWrapper {
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 950px) {
+  #homepageHeader {
+    font-size: 20px;
+  }
+  #homepageDescription {
+    font-size: 15px;
+  }
+  #toTheCalendarOuterWrapper {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 850px) {
+  #fullNavBarContainer {
+    /*flex-direction: column;*/
+  }
+  .faNavIconContainer {
+    border-radius: 100px;
+    height: 35px;
+    width: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .faNavIcon {
+    font-size: 22px;
+  }
+}
+
+@media (max-width: 800px) {
+  .fullNavTextContainer {
+    width: 65px;
+    font-size: 18px;
+  }
+  #titleContainer {
+    width: 47px;
+    font-size: 24px;
+  }
+}
+
+@media (max-width: 710px) {
+  #homepageContent {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  #homepageImg {
+    display: none;
+  }
+
+  #homepageText {
+    display: grid;
+    grid-template-rows: auto auto auto;
+  }
+
+  #socialWrapper {
+    display: flex;
+    flex-direction: row;
+  }
+  #titleContainer {
+    height: 48px;
+    width: 35px;
+    font-size: 20px;
+  }
+}
+
+@media (max-width: 515px) {
+  #homepageWrapper {
+    padding-bottom: 15px;
+  }
+}
+
+@media (max-width: 500px) {
+  #hamburgerOpen {
+    left: 82px;
+  }
+}
+
+/*calendar stuff*/
 
 #settings {
   display: flex;
@@ -363,8 +553,27 @@ html {
   margin-top: 0px;
 }
 
+.homepageEventWrapper{
+  background-color: #333333;
+  color: black;
+  border: 1px solid black;
+  border-radius: 8px;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
+  padding: 0px;
+  margin-top: 0px;
+}
+
 .eventHeaderWrapper {
-  border-bottom: 1px solid black
+  border-bottom: 1px solid black;
+}
+
+.homepageEventHeaderWrapper {
+  border-bottom: 1px solid black;
+  border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
+  background-color: #333333;
+  color: white;
 }
 
 .headerEvent {
@@ -389,12 +598,30 @@ html {
   padding-bottom: 17px;
 }
 
+.homepageEventHeader {
+  text-align: center;
+  font-size: 23px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  padding-top: 17px;
+  padding-bottom: 17px;
+}
+
 .expandedEventHeader {
   background-color: white;
 }
 
 .eventFull {
   background-color: #f7f7f7;
+}
+
+.homepageEventFull {
+  background-color: #f7f7f7;
+}
+
+.homepageEventDescription {
+  margin-left: 12px;
+  margin-right: 15px;
 }
 
 .eventDate {
@@ -405,7 +632,20 @@ html {
   padding-top: 15px;
 }
 
+.homepageEventDate {
+  text-align: center;
+  font-size: 20px;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  padding-top: 15px;
+}
+
 .eventImg {
+  display: block;
+  margin: 0 auto;
+}
+
+.homepageEventImg {
   display: block;
   margin: 0 auto;
 }
@@ -420,6 +660,13 @@ html {
   border-top: 1px solid black;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+}
+
+.homepageSourcesWrapper {
+  text-align: center;
+  border-top: 1px solid black;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 .links {
@@ -458,10 +705,11 @@ html {
   border-right: 1px solid #e6e6e6;
 }
 
-/*items only rendered at 800px width or below*/
+/*items only rendered at 710px width or below*/
 #hamburgerOpen {
   position: absolute;
-  top: 57px;
+  top: 35px;
+  left: 95px;
   display: flex;
   flex-direction: column;
   background: linear-gradient(0deg, rgba(37,37,37,1) 0%, #333333 100%);
@@ -470,7 +718,9 @@ html {
 };
 
 .hamburgerIcon {
-  margin-left: 10px;
+  position: absolute;
+  left: 90px;
+  top: 15px;
 }
 
 .hamburgerText {
