Finished major redesign (phew!). Homepage with event of the day listed, nice banner image, Zinn portrait, responsive, etc. Last to do is to update meta tags dynamically so that social media sharing works better.

--- a/src/volunteer.css
+++ b/src/volunteer.css
@@ -1,8 +1,9 @@
 #volunteerWrapper {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
-  margin-top: 15px;
+  padding-top: 15px;
   margin-bottom: 10px;
+
 }
 
 #bottomP {
