--- a/src/App.css
+++ b/src/App.css
@@ -11,17 +11,21 @@ html {
   min-height: 100%;
 }
 
+#bannerImg {
+  width: 100%;
+}
+
 /*big navbar stuff */
 
 #fullNavBarContainer {
   display: flex;
   position: sticky;
-  top: 0px;
+  margin-top: -4px;
   justify-content: space-between;
   padding-right: 25px;
   background-color: #f7f7f7;
-  border-bottom: 1px solid #d1d1d1;
   z-index: 99;
+  border-bottom: 1px solid #d1d1d1;
 }
 
 #fullNavLeft {
@@ -53,6 +57,8 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  /*the following item fixes a small aesthetic issue with fullnavbar's border*/
+  margin-bottom: -1px;
 }
 
 #titleContainer:hover {
@@ -122,7 +128,7 @@ html {
 #smallNavBarContainer {
   display: flex;
   position: sticky;
-  top: 0px;
+  margin-top: -4px;
   justify-content: space-between;
   height: 50px;
   padding-right: 25px;
@@ -244,7 +250,7 @@ html {
 
 #homepageContent {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
 }
 
 #homepageImg {
@@ -254,12 +260,31 @@ html {
 
 #homepageText {
   grid-column: 2;
-  display: grid;
-  grid-template-rows: auto auto auto;
+  background-color: #fafafa;
+  color: #333333;
 }
 
 #eventOfTheDayWrapper {
-  grid-column: 1 / 2;
+  grid-column: 1 / 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-top: 1px solid #d1d1d1;
+  background-color: #f5f5f5;
+}
+
+#eventOTDTextWrapper {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+#eventOfTheDay {
+  display: inline-block;
+  padding: 3px;
+  color: #333333;
+  font-size: 36px;
+  margin: 0px;
 }
 
 #homepageTextWrapper {
@@ -273,20 +298,20 @@ html {
   font-size: 42px;
   font-weight: bold;
   margin-top: 10px;
-  margin-bottom: 5px;
+  margin-bottom: 15px;
 }
 
 #homepageDescription {
   font-size: 22px;
-  margin-top: 10px;
+  margin-top: 15px;
+  margin-bottom: 20px;
   margin-left: 25px;
   margin-right: 15px;
 }
 
 #toTheCalendarOuterWrapper {
-  background-color: #e8e8e8;
   color: #333333;
-  border: 1px solid black;
+  border: 1px solid #8e8e8e;
   padding: 18px;
   padding-top: 12px;
   padding-bottom: 12px;
@@ -294,6 +319,7 @@ html {
   display: table;
   border-radius: 10px;
   margin: auto;
+  margin-bottom: 10px;
   transition: .5s ease;
   text-decoration: none;
 }
@@ -315,21 +341,26 @@ html {
   margin-bottom: 0px;
 }
 
-@media (max-width: 1300px) {
+@media (max-width: 1330px) {
   #homepageHeader {
     font-size: 36px;
+    margin-bottom: 10px;
   }
   #homepageDescription {
     font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
   }
 }
 
 @media (max-width: 1140px) {
   #homepageHeader {
     font-size: 30px;
+    margin-bottom: 5px;
   }
   #homepageDescription {
     font-size: 18px;
+    margin-bottom: 5px;
   }
   #toTheCalendarOuterWrapper {
     font-size: 24px;
@@ -344,6 +375,7 @@ html {
     font-size: 16px;
   }
   #toTheCalendarOuterWrapper {
+    margin-top: 10px;
     font-size: 20px;
   }
 }
@@ -375,6 +407,18 @@ html {
   .faNavIcon {
     font-size: 22px;
   }
+  #homepageHeader {
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+  #homepageDescription {
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+  #toTheCalendarOuterWrapper {
+    margin-top: 6px;
+    padding: 8px;
+  }
 }
 
 @media (max-width: 800px) {
@@ -386,21 +430,27 @@ html {
     width: 47px;
     font-size: 24px;
   }
+
 }
 
-@media (max-width: 710px) {
+@media (max-width: 780px) {
   #homepageContent {
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 18fr 1fr;
+    padding-top: 5px;
   }
 
   #homepageImg {
     display: none;
   }
 
+  #homepageImgSmall {
+    width: 32%;
+    margin: auto;
+  }
+
   #homepageText {
-    display: grid;
-    grid-template-rows: auto auto auto;
+    grid-column: 2;
   }
 
   #socialWrapper {
@@ -417,12 +467,6 @@ html {
 @media (max-width: 515px) {
   #homepageWrapper {
     padding-bottom: 15px;
-  }
-}
-
-@media (max-width: 500px) {
-  #hamburgerOpen {
-    left: 82px;
   }
 }
 
@@ -554,6 +598,8 @@ html {
 }
 
 .homepageEventWrapper{
+  width: 75%;
+  margin: auto;
   background-color: #333333;
   color: black;
   border: 1px solid black;
@@ -562,6 +608,7 @@ html {
   border-bottom-left-radius: 0px;
   padding: 0px;
   margin-top: 0px;
+  margin-bottom: 15px;
 }
 
 .eventHeaderWrapper {
@@ -620,8 +667,8 @@ html {
 }
 
 .homepageEventDescription {
-  margin-left: 12px;
-  margin-right: 15px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .eventDate {
@@ -666,7 +713,7 @@ html {
   text-align: center;
   border-top: 1px solid black;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .links {
@@ -705,10 +752,10 @@ html {
   border-right: 1px solid #e6e6e6;
 }
 
-/*items only rendered at 710px width or below*/
+/*items only rendered at 780px width or below*/
 #hamburgerOpen {
   position: absolute;
-  top: 35px;
+  /*top defined dynamically in code due to banner image height shifting with resize*/
   left: 95px;
   display: flex;
   flex-direction: column;
@@ -716,6 +763,7 @@ html {
   z-index: 100;
   border: 1px solid #333333;
 };
+
 
 .hamburgerIcon {
   position: absolute;
@@ -862,6 +910,12 @@ html {
   }
 }
 
+@media (max-width: 570px) {
+  .links {
+    font-size: 20px;
+  }
+}
+
 @media (max-width: 500px) {
   #datePicker {
 
@@ -911,6 +965,10 @@ html {
     display: flex;
     flex-direction: column;
   }
+  .homepageSourcesWrapper {
+    display: flex;
+    flex-direction: column;
+  }
   .source {
     border-right: 0px;
     border-bottom: 1px solid #e6e6e6;
@@ -921,6 +979,9 @@ html {
   }
   .emptyPrompt {
     font-size: 15px;
+  }
+  #hamburgerOpen {
+    left: 82px;
   }
 }
 
