Small touchup on bottom of mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -473,7 +473,7 @@ html {
 @media (max-width: 515px) {
   #homepageWrapper {
     padding-bottom: 15px;
-    background-color: #afafaf;
+    background-color: #f5f5f5;
   }
 }
 
