--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -633,13 +633,13 @@ html {
   background-color: white;
 }
 
-.eventFull {
+/* .eventFull {
   background-color: #f7f7f7;
 }
 
 .homepageEventFull {
   background-color: #f7f7f7;
-}
+} */
 
 .homepageEventDescription {
   margin-left: 20px;
@@ -647,11 +647,9 @@ html {
 }
 
 .eventDate {
-  text-align: center;
   font-size: 20px;
   margin-top: 0px;
   margin-bottom: 10px;
-  padding-top: 15px;
 }
 
 .homepageEventDate {
@@ -659,12 +657,11 @@ html {
   font-size: 20px;
   margin-top: 0px;
   margin-bottom: 10px;
-  padding-top: 15px;
 }
 
 .eventImg {
   display: block;
-  margin: 0 auto;
+  margin: 10px auto;
 }
 
 .homepageEventImg {
@@ -679,7 +676,8 @@ html {
 
 .sourcesWrapper {
   text-align: center;
-  border-top: 1px solid black;
+  /* border-top: 1px solid black; */
+  margin-top: 10px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
 }
@@ -925,11 +923,10 @@ html {
     padding-bottom: 15px;
   }
   .eventDate {
-    text-align: center;
     font-size: 18px;
+    font-weight: bold;
     margin-top: 0px;
     margin-bottom: 8px;
-    padding-top: 12px;
   }
   .eventDescription {
     margin-left: 23px;
