--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -235,7 +235,7 @@ html {
 
 #homepageText {
   grid-column: 2;
-  background-color: #fafafa;
+  /* background-color: #fafafa; */
   color: #333333;
 }
 
@@ -244,7 +244,7 @@ html {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border-top: 1px solid #d1d1d1;
+  /* border-top: 1px solid #d1d1d1; */
   background-color: #f5f5f5;
 }
 
@@ -419,10 +419,6 @@ html {
     display: none;
   }
 
-  #homepageImgSmall {
-    width: 32%;
-    margin: auto;
-  }
 
   #homepageText {
     padding-top: 5px;
@@ -431,6 +427,8 @@ html {
 
   #homepageDescription {
     margin-bottom: 8px;
+    margin-right: 30px;
+    margin-left: 30px;
     font-size: 17px;
   }
 
